# StudyAssistant

./: .gitignore  .google-cookie  README.md  assistant.db-shm  assistant.db-wal  pyproject.toml
src/study_assistant/: __main__.py  agents.py  config.py
src/study_assistant/tools/: assignment_manager.py  common.py  discovery.py  list_incoming_pdfs.py  pdf_reader.py  web_search_augment.py  word_reader.py  zotero_tools.py
src/study_assistant/ui/: console.py  dearpygui_depreciated.py  gui.py
src/study_assistant/ui/vercel-ui/: production_readiness.md
src/study_assistant/ui/vercel-ui/app/chat/: route.ts
src/study_assistant/ui/vercel-ui/components/: ChatWindow.tsx
