[tool.poetry]
name = "study-assistant"
version = "0.1.0"
description = "Study assistant powered by xAI"
authors = ["Jakob <your@email>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xai-ai-library = { path = "../xai-ai-library", develop = true }  # or git = "..."
dearpygui = "^2.0"         # for GUI
pymupdf = "^1.24"           # PDF
python-docx = "^1.1"        # Word
pyzotero = "^1.5"           # Zotero
# add others as needed: requests, beautifulsoup4, etc.

[tool.poetry.dev-dependencies]
pytest = "^8.0"
black = "^24.0"
ruff = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"